--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,11 @@ form {
   border-radius: 10px;
 }
 
+p {
+  margin: 15px 0 0 0;
+  padding: 0;
+}
+
 .btn-custom {
   background-color: rgb(167, 83, 245);
   color: rgb(246, 241, 249);
@@ -23,7 +28,7 @@ form {
 }
 .poem {
   display: none;
-  margin: 20px auto;
+  margin: 20px 0 0 0;
   padding: 5px;
   background-color: rgb(167, 83, 245, 0.2);
   border-left: thick solid rgb(167, 83, 245);
